--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PodcastApp</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_my_preferences">MyPreferencesActivity</string>
+    <string name="okBtn">OK</string>
 </resources>
