--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_my_preferences">MyPreferencesActivity</string>
     <string name="okBtn">OK</string>
+    <string name="secret">5824ec07e5183ac5</string>
+    <string name="app_key">app_key=2acb02a2a89f0d366e569b228320619b</string>
+    <string name="app_id">app_id=950fdb28</string>
 </resources>
